oc-templates/base/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: "nps-agent-deployment"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "nps-agent"
  template:
    metadata:
      labels:
        app: "nps-agent"
    spec:
      containers:
        - name: "nps-agent"
          image: "quay.io/rh_ee_taagarwa/demo_mlflow_agent_tracing:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: "1"
              memory: 1Gi
          volumeMounts:
            - name: db-volume
              mountPath: /opt/app-root/src/db
              readOnly: false
      volumes:
        - name: db-volume
          emptyDir: {}
      restartPolicy: Always
  strategy:
    type: RollingUpdate
