oc-templates/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: "nps-agent-service"
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: "nps-agent-tls"
spec:
  selector:
    app: "nps-agent"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
