oc-templates/base/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: "nps-agent-route"
  labels:
    shard: internal
spec:
  port:
    targetPort: 8000
  to:
    kind: Service
    name: "nps-agent-service"
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
